--- a/harvard.html
+++ b/harvard.html
@@ -4,7 +4,7 @@
         <title>Harvardlecture1</title>
     </head>
     <body>
-        <h1>Hi welcome to this page</h1>
+        <h1 style="color: blue;">Hi welcome to this page</h1>
         <h1>How you doing?</h1>
         lslslslslsls
         Hi there
