--- a/harvard.html
+++ b/harvard.html
@@ -2,11 +2,17 @@
 <html lang="en">
     <head>
         <title>Harvardlecture1</title>
+        <style>
+            h1{
+                color: blue;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color: blue;">Hi welcome to this page</h1>
+        <h1>Hi welcome to this page</h1>
         <h1>How you doing?</h1>
         lslslslslsls
         Hi there
+
     </body>
 </html>
